force-app/main/default/objects/Despesa__c/Despesa__c.object-meta.xml
<CustomObject>
    <label>Despesa</label>
    <nameField>
        <label>Nome da despesa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Despesas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>