force-app/main/default/objects/Despesa__c/fields/Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Colaborador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Despesas</relationshipLabel>
    <relationshipName>Despesas</relationshipName>
    <type>Lookup</type>
</CustomField>