force-app/main/default/objects/Despesa__c/fields/Data_da_Despesa__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Despesa__c</fullName>
    <label>Data da Despesa</label>
    <type>Date</type>
</CustomField>