force-app/main/default/objects/Despesa__c/fields/Motivo_da_Rejeicao__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_Rejeicao__c</fullName>
    <label>Motivo da Rejeição</label>
    <type>TextArea</type>
</CustomField>