force-app/main/default/objects/Despesa__c/fields/Pago__c.field-meta.xml
<CustomField>
    <fullName>Pago__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indica quando a despesa for paga pela empresa.</inlineHelpText>
    <label>Pago</label>
    <type>Checkbox</type>
</CustomField>