force-app/main/default/objects/Despesa__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Pago pelo colaborador</fullName>
            </value>
            <value>
                <fullName>Pago_pela_empresa</fullName>
                <label>Pago pela empresa</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>