force-app/main/default/objects/Despesa__c/fields/Viagem__c.field-meta.xml
<CustomField>
    <fullName>Viagem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Viagem</label>
    <referenceTo>Viagem__c</referenceTo>
    <relationshipLabel>Despesas</relationshipLabel>
    <relationshipName>Despesas</relationshipName>
    <type>Lookup</type>
</CustomField>