force-app/main/default/objects/Despesa__c/validationRules/CriarDespesaSemClienteAtivo.validationRule-meta.xml
<ValidationRule>
    <fullName>CriarDespesaSemClienteAtivo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(ISPICKVAL(Cliente__r.Status__c, &quot;Ativo&quot;))
)</errorConditionFormula>
    <errorMessage>Não é possível criar esse registro com cliente que não é ativo.</errorMessage>
</ValidationRule>