force-app/main/default/objects/Despesa__c/validationRules/PreencherMotivoRejeicao.validationRule-meta.xml
<ValidationRule>
    <fullName>PreencherMotivoRejeicao</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISPICKVAL( Status__c , &quot;Rejeitado&quot;),
ISBLANK( Motivo_da_Rejeicao__c)
)</errorConditionFormula>
    <errorMessage>Se o reembolso foi rejeitado, preencher campo do Motivo da Rejeição.</errorMessage>
</ValidationRule>