force-app/main/default/objects/Despesa__c/validationRules/Status_Novo_Para_Aprovado_SemAprovacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Novo_Para_Aprovado_SemAprovacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Pago__c=false,
ISPICKVAL(PRIORVALUE(Status__c), &quot;Novo&quot;),
ISPICKVAL(Status__c, &quot;Aprovado&quot;)
)</errorConditionFormula>
    <errorMessage>Para a despesa ser aprovada, deve passar pelo processo de aprovação com o supervisor e o campo Pago estar preenchido.</errorMessage>
</ValidationRule>